# AdaptusMechanicusTranslator

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  cli.py  mechanicus_translator.py  pyproject.toml  server.py  share.py  task.md  translator.py
.claude/: settings.local.json
tests/: test_server.py  test_translator.py
